--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/router": "^18.0.6",
     "@ng-icons/core": "^28.1.0",
     "@ng-icons/feather-icons": "^28.1.0",
+    "@ngrx/store": "^18.0.1",
+    "@ngrx/store-devtools": "^18.0.1",
+    "ngrx-store-localstorage": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.7"
