--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/store-devtools": "^18.0.1",
     "ngrx-store-localstorage": "^18.0.0",
     "rxjs": "~7.8.0",
+    "smplr": "^0.15.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.7"
   },
